SERVER-53445 Impose lock acquisition timeout for background validation